Initial commit: Set up project and add README

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "sourceMap": true,
+    "paths": {
+      "ngx-scroll-animations": [
+        "./dist/ngx-scroll-animations"
+      ]
+    },
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
