--- a/package.json
+++ b/package.json
@@ -1,37 +1,68 @@
 {
   "name": "ngx-scroll-animations",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "An Angular directive that applies CSS animations to elements as they become visible through scrolling.",
+  "author": {
+    "name": "Alex Frei",
+    "email": "alex.frei@waio.ch",
+    "url": "https:waio.ch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hm21/ngx-scroll-animations.git"
+  },
+  "keywords": [
+    "angular",
+    "angular2",
+    "scroll",
+    "animations"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/hm21/ngx-scroll-animations/issues"
+  },
+  "homepage": "https://github.com/hm21/ngx-scroll-animations#readme",
+  "contributors": [],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build ngx-scroll-animations & npm run build:copyfiles & npm run build:styles",
+    "build:copyfiles": "copyfiles CHANGELOG.md README.md LICENSE dist/ngx-scroll-animations",
+    "build:styles": "sass --style compressed dist/ngx-scroll-animations/styles/animations.scss dist/ngx-scroll-animations/styles/animations.min.scss & sass dist/ngx-scroll-animations/styles/animations.scss dist/ngx-scroll-animations/styles/animations.css & sass --style compressed dist/ngx-scroll-animations/styles/animations.scss dist/ngx-scroll-animations/styles/animations.min.css",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "serve:ssr:demo": "node dist/demo/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/router": "^17.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "@angular/common": "^17.0.7",
+    "@angular/compiler": "^17.0.7",
+    "@angular/core": "^17.0.7",
+    "@angular/router": "^17.0.7",
+    "@angular/platform-browser": "^17.0.7",
+    "@angular/platform-browser-dynamic": "^17.0.7",
+    "@angular/platform-server": "^17.0.7",
+    "@angular/ssr": "^17.0.7",
+    "express": "^4.18.2",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
+    "@angular-devkit/build-angular": "^17.0.7",
+    "@angular/cli": "^17.0.7",
+    "@angular/compiler-cli": "^17.0.7",
+    "@types/express": "^4.17.17",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^18.18.0",
+    "jasmine-core": "~5.1.1",
+    "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^17.0.2",
+    "copyfiles": "^2.4.1",
     "typescript": "~5.2.2"
   }
 }
