--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "ng test",
     "serve:ssr:demo": "node dist/demo/server/server.mjs"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/common": "^17.0.7",
     "@angular/compiler": "^17.0.7",
