--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "npm:publish": "npm version patch",
     "build": "ng build ngx-scroll-animations & npm run build:copyfiles & npm run build:styles",
     "build:copyfiles": "copyfiles CHANGELOG.md README.md LICENSE dist/ngx-scroll-animations",
     "build:styles": "sass --style compressed dist/ngx-scroll-animations/styles/animations.scss dist/ngx-scroll-animations/styles/animations.min.scss & sass dist/ngx-scroll-animations/styles/animations.scss dist/ngx-scroll-animations/styles/animations.css & sass --style compressed dist/ngx-scroll-animations/styles/animations.scss dist/ngx-scroll-animations/styles/animations.min.css",
