Update project configuration and documentation;
- Modify .npmignore and README.md to reflect current project state.
- Delete ngx-scroll-animations directory to streamline project structure.
- Update package.json files in root and ngx-scroll-animations directories accordingly.

--- a/.npmignore
+++ b/.npmignore
@@ -33,5 +33,14 @@ tslint.json
 src/
 index.ts
 
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
 # ignore compiles files
 /compiled
