--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-scroll-animations",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "An Angular directive that applies CSS animations to elements as they become visible through scrolling.",
   "author": {
     "name": "Alex Frei",
@@ -26,7 +26,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "npm:publish": "npm publish",
+    "npm:publish": "cd dist/ngx-scroll-animations & npm publish",
     "build": "ng build ngx-scroll-animations & npm run build:copyfiles & npm run build:styles",
     "build:copyfiles": "copyfiles CHANGELOG.md README.md LICENSE dist/ngx-scroll-animations",
     "build:styles": "sass --style compressed dist/ngx-scroll-animations/styles/animations.scss dist/ngx-scroll-animations/styles/animations.min.scss & sass dist/ngx-scroll-animations/styles/animations.scss dist/ngx-scroll-animations/styles/animations.css & sass --style compressed dist/ngx-scroll-animations/styles/animations.scss dist/ngx-scroll-animations/styles/animations.min.css",
