--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-scroll-animations",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "This minimalistic Angular directive, free from external dependencies, empowers you to effortlessly implement CSS animations on elements. These animations trigger when an element comes into view through scrolling on the page. It seamlessly integrates with your choice of CSS animations.",
   "author": {
     "name": "Alex Frei",
@@ -36,34 +36,32 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/common": "^17.0.7",
-    "@angular/compiler": "^17.0.7",
-    "@angular/core": "^17.0.7",
-    "@angular/router": "^17.0.7",
-    "@angular/platform-browser": "^17.0.7",
-    "@angular/platform-browser-dynamic": "^17.0.7",
-    "@angular/platform-server": "^17.0.7",
-    "@angular/ssr": "^17.0.7",
-    "express": "^4.18.2",
+    "@angular/common": "^18.2.9",
+    "@angular/compiler": "^18.2.9",
+    "@angular/core": "^18.2.9",
+    "@angular/router": "^18.2.9",
+    "@angular/platform-browser": "^18.2.9",
+    "@angular/platform-browser-dynamic": "^18.2.9",
+    "@angular/platform-server": "^18.2.9",
+    "@angular/ssr": "^18.2.10",
+    "express": "^4.21.1",
     "rxjs": "~7.8.1",
-    "tslib": "^2.6.2",
-    "zone.js": "~0.14.2"
+    "tslib": "^2.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.7",
-    "@angular/cli": "^17.0.7",
-    "@angular/compiler-cli": "^17.0.7",
-    "@types/express": "^4.17.17",
+    "@angular-devkit/build-angular": "^18.2.10",
+    "@angular/cli": "^18.2.10",
+    "@angular/compiler-cli": "^18.2.9",
+    "@types/express": "^5.0.0",
     "@types/jasmine": "~5.1.4",
-    "@types/node": "^18.18.0",
-    "jasmine-core": "~5.1.1",
-    "karma": "~6.4.2",
+    "@types/node": "^22.7.9",
+    "jasmine-core": "~5.4.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^17.0.2",
-    "copyfiles": "^2.4.1",
-    "typescript": "~5.2.2"
+    "ng-packagr": "^18.2.1",
+    "typescript": "~5.5.4"
   }
 }
